package category

import (
	"context"

	"github.com/spf13/cast"

	"github.com/ve-weiyi/ve-blog-golang/zero/service/blog/api/internal/convert"
	"github.com/ve-weiyi/ve-blog-golang/zero/service/blog/api/internal/svc"
	"github.com/ve-weiyi/ve-blog-golang/zero/service/blog/api/internal/types"
	"github.com/ve-weiyi/ve-blog-golang/zero/service/blog/rpc/pb/blog"

	"github.com/zeromicro/go-zero/core/logx"
)

type FindCategoryListLogic struct {
	logx.Logger
	ctx    context.Context
	svcCtx *svc.ServiceContext
}

// 分页获取文章分类列表
func NewFindCategoryListLogic(ctx context.Context, svcCtx *svc.ServiceContext) *FindCategoryListLogic {
	return &FindCategoryListLogic{
		Logger: logx.WithContext(ctx),
		ctx:    ctx,
		svcCtx: svcCtx,
	}
}

func (l *FindCategoryListLogic) FindCategoryList(req *types.PageQuery) (resp *types.PageResp, err error) {
	in := convert.ConvertPageQuery(req)
	out, err := l.svcCtx.CategoryRpc.FindCategoryList(l.ctx, in)
	if err != nil {
		return nil, err
	}

	total, err := l.svcCtx.TagRpc.FindTagCount(l.ctx, in)
	if err != nil {
		return nil, err
	}

	var list []*types.CategoryDetails
	for _, v := range out.List {
		row, _ := l.svcCtx.ArticleRpc.FindArticleCount(l.ctx, &blog.PageQuery{
			Conditions: "category_id = ?",
			Args:       []string{cast.ToString(v.Id)},
		})

		m := convert.ConvertCategoryDetailsTypes(v)
		m.ArticleCount = row.Count
		list = append(list, m)
	}

	resp = &types.PageResp{}
	resp.Page = in.Page
	resp.PageSize = in.PageSize
	resp.Total = total.Count
	resp.List = list
	return resp, nil
}
